[gd_scene load_steps=49 format=2]

[ext_resource path="res://InfoWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Game.gd" type="Script" id=2]
[ext_resource path="res://Menu/Buttons/HITBOX/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Loading/Nexting.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Backgrounds/Transition/Transition.png" type="Texture" id=5]
[ext_resource path="res://Menu/Buttons/STICKS/Right_stick.tscn" type="PackedScene" id=6]
[ext_resource path="res://Menu/Buttons/STICKS/Left_stick.tscn" type="PackedScene" id=7]
[ext_resource path="res://Menu/Buttons/ABCD/Choice.tscn" type="PackedScene" id=8]
[ext_resource path="res://Menu/Buttons/STICKS/List.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/Weeks/Week1/Textures/Background.png" type="Texture" id=10]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Exactly/GF_exactly1.png" type="Texture" id=11]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Exactly/GF_exactly3.png" type="Texture" id=12]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Exactly/GF_exactly5.png" type="Texture" id=13]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Exactly/GF_exactly2.png" type="Texture" id=14]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Exactly/GF_exactly4.png" type="Texture" id=15]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle6.png" type="Texture" id=16]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle3.png" type="Texture" id=17]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle1.png" type="Texture" id=18]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle4.png" type="Texture" id=19]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle5.png" type="Texture" id=20]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle2.png" type="Texture" id=21]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle7.png" type="Texture" id=22]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle14.png" type="Texture" id=23]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle15.png" type="Texture" id=24]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle8.png" type="Texture" id=25]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle9.png" type="Texture" id=26]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle13.png" type="Texture" id=27]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle17.png" type="Texture" id=28]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle19.png" type="Texture" id=29]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle20.png" type="Texture" id=30]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle16.png" type="Texture" id=31]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle11.png" type="Texture" id=32]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle18.png" type="Texture" id=33]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle10.png" type="Texture" id=34]
[ext_resource path="res://Game/Environment/Characters/Girlfrend/Idle/GF_idle12.png" type="Texture" id=35]
[ext_resource path="res://Game/Weeks/Week1/Textures/Новый проект (17).png" type="Texture" id=36]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Idle/BF_idle5.png" type="Texture" id=37]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Idle/BF_idle1.png" type="Texture" id=38]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Exactly/BF_exactly2.png" type="Texture" id=39]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Idle/BF_idle3.png" type="Texture" id=40]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Idle/BF_idle4.png" type="Texture" id=41]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Idle/BF_idle2.png" type="Texture" id=42]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Exactly/BF_exactly3.png" type="Texture" id=43]
[ext_resource path="res://Game/Environment/Characters/Boyfrend/Exactly/BF_exactly1.png" type="Texture" id=44]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Chapter1",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": false,
"name": "Tutorial",
"speed": 1.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "GF_stage_exactly",
"speed": 7.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 21 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 16 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 27 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 31 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 29 ), ExtResource( 30 ) ],
"loop": true,
"name": "GF_stage_idle",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 42 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 37 ) ],
"loop": false,
"name": "BF_stage_Aidle",
"speed": 14.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": false,
"name": "BF_stage_Uidle",
"speed": 1.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 39 ), ExtResource( 43 ) ],
"loop": false,
"name": "BF_stage_exactly",
"speed": 7.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimBackground" type="AnimatedSprite" parent="."]
position = Vector2( 366, 320 )
scale = Vector2( 1.13, 1.16 )
frames = SubResource( 1 )
animation = "Tutorial"

[node name="GirlFrend" type="AnimatedSprite" parent="."]
position = Vector2( 528, 216 )
scale = Vector2( 0.95, 0.95 )
frames = SubResource( 2 )
animation = "GF_stage_idle"
frame = 18
playing = true

[node name="BoyFrend" type="AnimatedSprite" parent="."]
position = Vector2( 748, 400 )
scale = Vector2( 0.95, 0.95 )
frames = SubResource( 3 )
animation = "BF_stage_Aidle"
frame = 4
playing = true

[node name="НовыйПроект(17)" type="Sprite" parent="."]
position = Vector2( 644, 309 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 36 )

[node name="Rival" type="AnimatedSprite" parent="."]
position = Vector2( 510, 250 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

[node name="Interface" type="Node2D" parent="."]

[node name="Choice" parent="Interface" instance=ExtResource( 8 )]
margin_top = 30.0
margin_bottom = 160.0

[node name="List" parent="Interface" instance=ExtResource( 9 )]
margin_top = 30.0
margin_bottom = 160.0

[node name="LeftStick" parent="Interface" instance=ExtResource( 7 )]
margin_top = 40.0
margin_bottom = 170.0

[node name="RightStick" parent="Interface" instance=ExtResource( 6 )]
margin_top = 40.0
margin_bottom = 170.0

[node name="Transition" type="Sprite" parent="Interface"]
position = Vector2( 643, -1020 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )

[node name="InfoWindow" parent="Interface" instance=ExtResource( 1 )]
margin_top = -30.0
margin_bottom = 100.0

[node name="HitBox" parent="Interface" instance=ExtResource( 3 )]

[node name="Nexting" parent="Interface" instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="Interface"]
position = Vector2( 643, 309 )
current = true
zoom = Vector2( 0.78, 0.78 )
smoothing_speed = 40.0
